@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: term.c,v 1.184.2.10 2010/09/18 02:55:55 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: term.c,v 1.184.2.11 2010/10/07 05:31:42 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - term.c */
@@ -135,8 +135,8 @@ enum set_encoding_id encoding;
 /* table of encoding names, for output of the setting */
 const char *encoding_names[] = {
     "default", "iso_8859_1", "iso_8859_2", "iso_8859_9", "iso_8859_15",
-    "cp437", "cp850", "cp852", "cp1250", "cp1254", "koi8r", "koi8u", 
-    "utf8", NULL };
+    "cp437", "cp850", "cp852", "cp1250", "cp1251", "cp1254", 
+    "koi8r", "koi8u", "utf8", NULL };
 /* 'set encoding' options */
 const struct gen_table set_encoding_tbl[] =
 {
@@ -150,6 +150,7 @@ const struct gen_table set_encoding_tbl[] =
     { "cp850", S_ENC_CP850 },
     { "cp852", S_ENC_CP852 },
     { "cp1250", S_ENC_CP1250 },
+    { "cp1251", S_ENC_CP1251 },
     { "cp1254", S_ENC_CP1254 },
     { "koi8$r", S_ENC_KOI8_R },
     { "koi8$u", S_ENC_KOI8_U },
