@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: svg.trm,v 1.101.2.3 2010/03/04 17:16:38 sfeam Exp $
+ * $Id: svg.trm,v 1.101.2.4 2010/10/07 05:31:42 sfeam Exp $
  */
 
 /*------------------------------------------------------------------------------------------------------------------------------------
@@ -676,6 +676,7 @@ SVG_init ()
 	case S_ENC_CP850:	svg_encoding = "encoding=\"ibm-850\" "; break;
 	case S_ENC_CP852:	svg_encoding = "encoding=\"ibm-852\" "; break;
 	case S_ENC_CP1250:	svg_encoding = "encoding=\"windows-1250\" "; break;
+	case S_ENC_CP1251:	svg_encoding = "encoding=\"windows-1251\" "; break;
 	case S_ENC_KOI8_R:	svg_encoding = "encoding=\"koi8-r\" "; break;
 	case S_ENC_KOI8_U:	svg_encoding = "encoding=\"koi8-u\" "; break;
 	case S_ENC_CP437:	svg_encoding = ""; break;
