@@ -1,8 +1,14 @@
+2010-10-06  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/post.trm term/pslatex.trm term/svg.trm term/PostScript/cp1251.ps
+	src/term_api.h src/term.c docs/gnuplot.doc: Add support for codepage 1251,
+	an alternative 8-bit Cyrillic encoding.
+
 2010-10-04  Matthew Biggar  <biggarm@users.sourceforge.net>
 
 	* src/Makefile.am src/alloc.c:  Architecture (Alpha) specific work-
-	around to insure that gp_malloc() does fail on error if 0 bytes are
-	successfully allocated.
+	around to insure that gp_malloc() does not fail on error if 0 bytes
+	are successfully allocated.
 
 2010-10-02  Ethan A Merritt  <merritt@u.washington.edu>
 
